<resources>
    <string name="app_name">Chat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logo_here">Logo here</string>
    <string name="submit">Submit</string>
    <string name="logout">Logout</string>
    <string name="add_friend">Add friend</string>
    <string name="your_name">Your name:</string>
    <string name="image_here">Image here</string>
    <string name="my_name">My Name</string>
    <string name="save">Save</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="back">Back</string>
    <string name="background">background</string>
    <string name="chatheo">ChaTheo</string>
</resources>